[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.25"
once_cell = "1.16.0"
regex = "1.7.0"
serde = { version = "1.0.147", features = ["serde_derive"] }
tokio = { version = "1.22.0", features = ["full"] }
warp = "0.3.3"
